test/parser/assignment/invalid_pattern_error.exp
Error: Invalid left hand side of assignment
test/parser/assignment/invalid_pattern_error.myte:4:2
 4 |   1 = 2;
   |   ^