test/parser/assignment/invalid_pattern_error.myte
module Test

fun main(){
  1 = 2;
}